--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     <div class="container">
         <div class="result">
-            
+            Player 2 Wins!
         </div>
         <div class="board">
             <button class="cell" data-index="0"></button>
