added restart button

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
         </div>
     </nav>
     <div class="container">
-        <div class="result">
-            Player 2 Wins!
+        <div class="top-hud">
+            <div class="result"></div>
+            <button class="restart">Restart<a/button>
         </div>
+        
         <div class="board">
             <button class="cell" data-index="0"></button>
             <button class="cell" data-index="1"></button>
