added github link to my profile

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="logo">TIC TAC TOE</div>
         <div class="all-links">
             <ul>
-                <li><a href="">Projects</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="https://github.com/Kumar-Aryan-99Pk?tab=repositories">Projects</a></li>
+                <li><a href="https://github.com/Kumar-Aryan-99Pk">About</a></li>
             </ul>
         </div>
     </nav>
